fixed minor bugs
