# server/api/swagger.yaml
@@ -12,7 +12,7 @@ info:
 
 host: "iasset.salzburgresearch.at"
 #host: "localhost:1908"
-#basePath: "/distributionnetwork"  # removed because the basePath is static
+## basePath: "/distributionnetwork"  # removed because the basePath is static
 schemes:
   - "https"
   - "http"
@@ -851,8 +851,8 @@ definitions:
         type: "string"
       on_kafka:
         type: "boolean"
-      keyfile_av:
-        type: "boolean"
+      key:
+        type: "string"
       description:
         type: "string"
   ClientAppBody:
